syntax="proto3";

package proto;
option go_package = "main/proto";

message MoveRequest {
  string direction = 1;
  int32 distance = 2;
  int32 speed = 3;
  optional float Kp = 4;
  optional float Ki = 5;
  optional float Kd = 6;
}

message TurnRequest {
  string direction = 1;
  int32 degrees = 2;
}

message VacuumPower {
  bool power = 1;
}

message Status {
  bool err_code = 1;
}

message Empty {}

// The services provided over rpc
service Robot {
  rpc Move(MoveRequest) returns (Status) {}
  rpc Turn(TurnRequest) returns (Status) {}
  rpc Vacuum(VacuumPower) returns (Status) {}
  rpc Stats(Status) returns (Status) {}
  rpc StopMovement(Empty) returns(Status) {}
}



